# github-events

./: .gitignore  CLAUDE.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  demo.yml
config/: lakehouse.yaml
docs/: DECISIONS.md  architecture.md  data_vault_catalog.md
docs/adr/: 001-batch-copy-into-only.md  002-pyspark-gold-over-dbt-and-scala.md  003-insert-only-raw-vault-idempotency.md  004-hash-key-strategy.md  005-databricks-asset-bundle.md
docs/marts/: collaboration_mart.md  developer_360_mart.md  repo_activity_mart.md
governance/unity_catalog/: grants.yaml  render.py
ingestion/github_archive/: README.md  __main__.py  domain.py  events.py  generator.py
observability/metrics/: report.py  writer.py
orchestration/: demo.py
pipelines/bronze/: README.md  copy_into.py
pipelines/business_vault/: README.md  bridge.py  derived.py  job.py  pit.py
pipelines/common/: config.py  hashing.py  session.py
pipelines/gold/: README.md  collaboration.py  developer_360.py  job.py  repo_activity.py
pipelines/raw_vault/: README.md  enforcement.py  job.py  loaders.py  staging.py
platform/: README.md
platform/databricks/ci/: workspace_stub.py
platform/databricks/resources/: lakehouse_job.yml
platform/terraform/: outputs.tf  providers.tf  unity_catalog.tf  variables.tf  versions.tf
quality/contracts/: README.md  compat.py  loader.py  models.py  spark_schema.py
quality/contracts/definitions/: fork_event.v1.yaml  issues_event.v1.yaml  pull_request_event.v1.yaml  push_event.v1.yaml  release_event.v1.yaml  watch_event.v1.yaml
quality/expectations/: __init__.py  checks.py  runner.py  suite.py
quality/expectations/suites/: bronze_github_events.yaml  gold_collaboration_mart.yaml  gold_developer_360_mart.yaml  gold_repo_activity_mart.yaml  raw_vault_eff_sat_issue_assignee.yaml  raw_vault_hub_actor.yaml  raw_vault_hub_issue.yaml  raw_vault_hub_pull_request.yaml  raw_vault_hub_repo.yaml  raw_vault_link_actor_issue.yaml  raw_vault_link_actor_pull_request.yaml  raw_vault_link_actor_repo.yaml  raw_vault_link_issue_assignee.yaml  raw_vault_sat_actor_profile.yaml  raw_vault_sat_actor_repo_event.yaml  raw_vault_sat_issue_details.yaml  raw_vault_sat_pull_request_details.yaml  raw_vault_sat_repo_profile.yaml  (+1 more)
tests/: conftest.py
tests/integration/: test_copy_into.py  test_end_to_end.py
(+11 files in other folders)
